# yoker

./: .gitignore  .python-version  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  HISTORY.md  LICENSE  Makefile  NOTES.md  PACKAGE.md  PLAN.md  PLUGIN_DEBUG_REPORT.md  README.md  REQUIREMENTS.md  TODO.md  coverage.xml  pyproject.toml  run_with_demo_plugin.sh  test_websocket.py
.github/workflows/: pr.yml  test.yaml  tests.yml
analysis/: 2026-04-28-api-review-read-tool-hardening.md  2026-05-22-api-review-agentcore-implementation.md  2026-05-23-api-review-async-agent-implementation.md  agent-definition-loader.md  api-agent-tool.md  api-agentcore-extraction.md  api-async-agent.md  api-config-auto-discovery.md  api-context-manager.md  api-existence-tool.md  api-folder-creation-tool.md  api-git-tool.md  api-github-tool.md  api-list-tool.md  api-logging-system.md  api-make-tool.md  api-mbi-004-yoker-commands.md  api-python-tool.md  api-quart-webapp-review.md  api-quart-webapp.md  api-read-offset-limit.md  api-read-tool.md  api-search-enhancements.md  api-search-tool.md  api-skill-infrastructure.md  api-update-tool.md  api-webfetch-tool.md  api-websearch-tool.md  api-write-update-display.md  architecture.md  async-first-architecture.md  backlog-refinement-2026-05-27.md  bootstrap-config-detection.md  bootstrap-multi-provider-design.md  bootstrap-wizard-design.md  clevis-config-extension.md  clevis-feature-requests.md  component-resolution-strategy.md  configurable-components-design.md  context-implementation-plan.md  (+49 more)
demos/: README.md  agent-tool.md  basic.md  commands.md  existence-tool.md  git-tool.md  list-tool.md  mkdir-tool.md  read-tool.md  search-tool.md  session.md  skill-tool.md  skills-command.md  skills.md  thinking.md  update-tool.md  webfetch.md  websearch.md  write-tool.md  yoker.toml
demos/skills/: example.md  sing.md  yoker.toml
docs/: Makefile  NAME.md  cli.md  conf.py  index.md  installation.md  models.md  plugins.md  quickstart.md  rationale.md
docs/api/: index.md
docs/bug-analysis/: BUG-001-network-error-handling.md  issue-9-expanduser.md  security-error-handling.md
docs/guides/: creating-agentic-packages.md  getting-started-with-gemini.md  getting-started-with-ollama.md  getting-started-with-yoker.md  getting-started.md
examples/: batch_mode.py  custom_handler.py  library_usage.py  research_workflow.py  session_demo.py  yoker.toml
examples/agents/: main.md  markdown.md  researcher.md
examples/plugins/demo/: README.md  __init__.py  pyproject.toml
examples/plugins/demo/agents/: demo.md
examples/plugins/demo/yoker/: __init__.py
examples/plugins/demo/yoker/skills/greeting/: SKILL.md
examples/plugins/demo/yoker_plugin_demo/: __init__.py  tools.py
examples/plugins/demo/yoker_plugin_demo/agents/: backwards.md  demo.md
examples/python_api/: agent_builder.py  event_handling.py  one_shot.py  run_skill.py  session.py  sync_usage.py  workflow.py
examples/skills/: example.md
ideas/: naming-collection-sets.md
memory/: feedback_agent_session_continuity.md  feedback_functional_whole.md  feedback_pr_followup.md  project_webapp_standards.md
reporting/: clevis-integration-summary.md
reporting/1.1-project-setup/: summary.md
reporting/1.2-configuration-system/: summary.md
reporting/1.3-agent-definition-loader/: summary.md
reporting/1.4-context-manager/: consensus.md  development-summary.md  functional-review.md  summary.md
reporting/1.4.1-demo-session-integration/: summary.md
reporting/1.5-logging-system/: summary.md
reporting/1.5.2-mouse-selection/: consensus.md  summary.md  ux-ui-review.md
reporting/1.5.3-demo-session/: development-summary.md  functional-review.md  summary.md  ux-ui-review.md
reporting/1.5.4-event-logging/: summary.md
reporting/1.5.5-write-update-display/: consensus.md  summary.md
reporting/1.5.6-tool-content-display/: summary.md
reporting/1.6.1-documentation/: summary.md
reporting/1.6.2-project-rationale/: summary.md
reporting/1.7.1-agentcore-extraction/: consensus.md  development-summary.md  summary.md
reporting/1.7.3-async-agent-module/: consensus.md  development-summary.md
reporting/1.7.7-async-event-handler/: functional-review.md  (+1 more)
research/: INDEX.md
scripts/: analyze_session.py  demo_session.py  skill_demo.py
skills/: example.md
tests/: __init__.py  conftest.py  test_agent.py  test_agent_core.py  test_agent_loading.py  test_agent_web_backends.py  test_config.py  test_config_env_vars.py  test_content_type.py  test_content_type_windows.py  test_context.py  test_context_persisted.py  test_context_wrapper.py  test_demo.py  test_demo_plugin.py  test_demo_session.py  test_events.py  test_exceptions_new.py  test_issue_fixes.py  test_logging.py  test_main.py  test_main_error_handling.py  test_model_agent_resolution.py  test_network_error.py  test_plugin_agent_tool_namespacing.py  test_plugin_integration.py  test_plugin_skill_discovery.py  test_plugin_skills_loading.py  test_svg_generation.py  test_svg_no_duplicates.py  test_toml_config.py  test_tool_enabled_flag.py  test_tools_agent.py
(+461 files in other folders)
