[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yoker"
version = "0.1.0"
description = "A Python agent harness with configurable tools and guardrails - one who yokes agents together"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "Christophe VG", email = "contact@christophe.vg"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
keywords = ["agent", "llm", "ollama", "ai", "harness"]

dependencies = [
  "httpx>=0.25.0",
  "ollama>=0.6.0",
  "prompt_toolkit>=3.0.0",
  "python-dotenv>=1.0.0",
  "rich>=14.0.0",
  "structlog>=23.0.0",
  "pyyaml>=6.0",
  "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.10.0",
  "mypy>=1.13.0",
  "types-PyYAML>=6.0",
  "ruff>=0.8.0",
  "tox>=4.0.0",
  "tox-uv>=1.0.0",
  "build>=1.0.0",
  "twine>=5.0.0",
  "coveralls>=3.3.0",
]
docs = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=2.0.0",
  "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/christophevg/yoker"
Documentation = "https://yoker.readthedocs.io/"
Repository = "https://github.com/christophevg/yoker"
Issues = "https://github.com/christophevg/yoker/issues"

[project.scripts]
yoker = "yoker.__main__:main"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/yoker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=yoker --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.ruff]
line-length = 100
target-version = "py310"
indent-width = 2

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["yoker"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

[tool.tox]
env_list = ["py310", "py311", "py312"]

[tool.tox.env_run_base]
description = "run tests with pytest"
commands_pre = [
  ["uv", "pip", "install", "-e", "."],
  ["uv", "pip", "install", "pytest", "pytest-cov", "pytest-asyncio"],
]
commands = [
  ["pytest", "tests", "-v", "--cov=yoker", "--cov-report=term-missing"],
]

[tool.tox.env.py310]
base_python = ["python3.10"]

[tool.tox.env.py311]
base_python = ["python3.11"]

[tool.tox.env.py312]
base_python = ["python3.12"]
