[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yoker-plugin-demo"
version = "0.1.0"
description = "Demo plugin for Yoker - provides an echo tool, greeting skill, and demo agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "Christophe VG", email = "contact@christophe.vg"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
keywords = ["agent", "llm", "ollama", "ai", "harness", "plugin"]

dependencies = [
  "yoker>=0.4.0",
]

[tool.uv.sources]
yoker = { workspace = true }

[project.urls]
Homepage = "https://github.com/christophevg/yoker"
Documentation = "https://yoker.readthedocs.io/"
Repository = "https://github.com/christophevg/yoker"
Issues = "https://github.com/christophevg/yoker/issues"

[tool.hatch.build.targets.wheel]
packages = ["yoker_plugin_demo"]

[tool.ruff]
line-length = 100
target-version = "py310"
indent-width = 2

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["yoker_plugin_demo", "yoker"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"